# zylo-docs

./: .env.example  .gitattributes  .gitignore  README.md  gemini_test.py  pyproject.toml  release.sh  update_static.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-pypi-on-main-push.yml  main-pr-source-check.yml  sync-frontend-on-staging-push.yml
app/: main.py
app/routers/: schemas.py
app/schemas/: response.py  schema_data.py
app/services/: user_server_service.py
app/static/: index.html
app/static/assets/: index-7HCIg3RP.js  index-CaClfAqW.css  index-DqJhLDuk.js
zylo-docs/: cli.py  main.py
zylo-docs/static/assets/: index-BwFyYlC8.css
zylo_docs/: __init__.py  cli.py  exceptions.py  integration.py  main.py  schema_generator.py
zylo_docs/routers/: front_api.py  front_route.py  proxy_route.py  schemas.py
zylo_docs/schemas/: schema_data.py
zylo_docs/services/: hub_server_service.py  openapi_service.py  user_server_service.py
zylo_docs/static/: index.html  zylo-docs.html
zylo_docs/static/assets/: index-8tXfUjdZ.css  index-B-H0-02z.js  index-B3RNQpOF.js  index-B89DU4-V.js  index-BBKSYJUT.js  index-BC99XYYm.css  index-BClT6ZOE.js  index-BG9u8Pr4.css  index-BNuMwtM4.js  index-BS6Z-dUY.js  index-BSSHyDa6.css  index-BT-wdhUb.js  index-BUafJnzE.js  index-BUfzQ8vA.js  index-BaCkA6JL.js  index-BarBO221.js  index-BdyyrSIZ.js  index-BfQOsvd9.js  index-BfXdaFtc.css  index-BgMYURW7.css  index-BmYXrn21.js  index-Boq4V243.js  index-BvSiqKvt.css  index-BxM0fZad.css  index-C2Ech6Xm.js  index-C7Ib1-On.js  index-C7PLqkLZ.js  index-CIqz3tEk.css  (+46 more)
